remove float from bio image on small screens to avoid text squish

--- a/css/styles.css
+++ b/css/styles.css
@@ -742,6 +742,10 @@ figcaption {
         margin-top: 2em;
         margin-bottom: 1em;
     }
+    img.float-left  {
+      float: none;
+      margin-bottom: 1em;
+    }
 }
 
 
